benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_DivMod_iter1_error.log
=== Verification Error - Iteration 1 ===
File: benchmarks/verus/bignum/files/bignum_DivMod.rs
Time: 2025-09-15 10:44:00

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0277]: cannot add `char` to `u8`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_DivMod_impl.rs:83:40
   |
83 |       result_lsb.push((diff + 2) as u8 + b'0' as char);
   |                                        ^ no implementation for `u8 + char`
   |
   = help: the trait `std::ops::Add<char>` is not implemented for `u8`
   = help: the following other types implement trait `std::ops::Add<Rhs>`:
             `&u8` implements `std::ops::Add<u8>`
             `&u8` implements `std::ops::Add`
             `u8` implements `std::ops::Add<&u8>`
             `u8` implements `std::ops::Add`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_DivMod_impl.rs:108:28
    |
108 |     if compare(&remainder, divisor) {
    |        -------             ^^^^^^^ expected `&Vec<char>`, found `&[char]`
    |        |
    |        arguments to this function are incorrect
    |
    = note: expected reference `&std::vec::Vec<char>`
               found reference `&[char]`
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_DivMod_impl.rs:37:9
    |
37  | exec fn compare(a: &Vec<char>, b: &Vec<char>) -> (res: bool)
    |         ^^^^^^^                -------------

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_DivMod_impl.rs:109:55
    |
109 |       let new_remainder = subtract_binary(&remainder, divisor);
    |                           ---------------             ^^^^^^^ expected `&Vec<char>`, found `&[char]`
    |                           |
    |                           arguments to this function are incorrect
    |
    = note: expected reference `&std::vec::Vec<char>`
               found reference `&[char]`
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_DivMod_impl.rs:60:9
    |
60  | exec fn subtract_binary(a: &Vec<char>, b: &Vec<char>) -> (res: Vec<char>)
    |         ^^^^^^^^^^^^^^^                -------------

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0277]: cannot add `char` to `u8`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_DivMod_impl.rs:83:40
   |
83 |       result_lsb.push((diff + 2) as u8 + b'0' as char);
   |                                        ^ no implementation for `u8 + char`
   |
   = help: the trait `std::ops::Add<char>` is not implemented for `u8`
   = help: the following other types implement trait `std::ops::Add<Rhs>`:
             `&u8` implements `std::ops::Add<u8>`
             `&u8` implements `std::ops::Add`
             `u8` implements `std::ops::Add<&u8>`
             `u8` implements `std::ops::Add`

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_DivMod_impl.rs:108:28
    |
108 |     if compare(&remainder, divisor) {
    |        -------             ^^^^^^^ expected `&Vec<char>`, found `&[char]`
    |        |
    |        arguments to this function are incorrect
    |
    = note: expected reference `&std::vec::Vec<char>`
               found reference `&[char]`
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_DivMod_impl.rs:37:9
    |
37  | exec fn compare(a: &Vec<char>, b: &Vec<char>) -> (res: bool)
    |         ^^^^^^^                -------------

error[E0308]: mismatched types
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_DivMod_impl.rs:109:55
    |
109 |       let new_remainder = subtract_binary(&remainder, divisor);
    |                           ---------------             ^^^^^^^ expected `&Vec<char>`, found `&[char]`
    |                           |
    |                           arguments to this function are incorrect
    |
    = note: expected reference `&std::vec::Vec<char>`
               found reference `&[char]`
note: function defined here
   --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_DivMod_impl.rs:60:9
    |
60  | exec fn subtract_binary(a: &Vec<char>, b: &Vec<char>) -> (res: Vec<char>)
    |         ^^^^^^^^^^^^^^^                -------------

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
